--- a/login.html
+++ b/login.html
@@ -115,6 +115,7 @@
         <div id="loginFeedback" class="form-feedback" role="status" aria-live="polite"></div>
       </form>
       <div class="voltar">
+        <a href="cadastro.html">&larr; Não possui conta? </a><br>
         <a href="index.html">&larr; Voltar ao início</a>
       </div>
     </div>
