nono commit - falta testes

--- a/index.html
+++ b/index.html
@@ -1175,13 +1175,54 @@
           <h2 class="section-title reveal-opacity">
             História de Ribeirão Pires
           </h2>
-          <div class="card" style="padding: 16px">
-            <p style="line-height: 1.6; color: #444">
-              Ribeirão Pires possui uma história rica que remonta aos tempos
-              coloniais e evoluiu até se tornar uma referência regional em
-              cultura, lazer e gastronomia.
-            </p>
-          </div>
+<div class="card" style="padding: 24px; line-height: 1.7; color: #344;">
+  <h3 style="margin-top: 0; color: #e86c4d;">Origens e Século XVI</h3>
+  <ul style="list-style: disc; margin-left: 18px; margin-bottom: 14px;">
+    <li>
+      <b>Século XVI:</b> Região ocupada pela aldeia indígena Geribatiba, chefiada por Caiubi.
+    </li>
+    <li>
+      Terras cedidas a Brás Cubas, importante bandeirante, por meio do sistema de sesmarias.
+    </li>
+    <li>
+      Inicialmente, a região era pouco povoada e servia mais como rota de passagem entre vilas, devido à geografia serrana e mata fechada.
+    </li>
+  </ul>
+  <h3 style="color: #e86c4d;">Expansão Ferroviária e Imigração Europeia</h3>
+  <ul style="list-style: disc; margin-left: 18px; margin-bottom: 14px;">
+    <li>
+      <b>Século XIX:</b> Construção da <b>Estrada de Ferro São Paulo Railway</b>, ligando Santos a Jundiaí.
+    </li>
+    <li>
+      <b>1885:</b> Inauguração da estação ferroviária de Ribeirão Pires, impulsionando comércio e desenvolvimento.
+    </li>
+    <li>
+      Chegada de imigrantes italianos: em 1887 é criada uma colônia perto da Igreja de Nossa Senhora do Pilar.
+    </li>
+    <li>
+      Surgimento de olarias e produção de tijolos devido à argila encontrada na região.
+    </li>
+  </ul>
+  <h3 style="color: #e86c4d;">Desenvolvimento Moderno e Emancipação</h3>
+  <ul style="list-style: disc; margin-left: 18px; margin-bottom: 14px;">
+    <li>
+      <b>Anos 1940:</b> Instalação de chácaras de veraneio atrai famílias da Baixada Santista, valorizando ainda mais a natureza local.
+    </li>
+    <li>
+      <b>1953:</b> Ribeirão Pires conquista emancipação política e deixa de pertencer a Santo André.
+    </li>
+    <li>
+      <b>1º de janeiro de 1954:</b> Instalação oficial do município.
+    </li>
+    <li>
+      <b>19 de março:</b> Data escolhida para celebrar a emancipação, em homenagem a São José, padroeiro da cidade.
+    </li>
+  </ul>
+  <div style="font-size: 0.98em; color: #707780; margin-top: 1em;">
+    Fontes: <a href="https://camararp.sp.gov.br/" target="_blank" rel="noopener">camararp.sp.gov.br</a>,
+    <a href="https://www.turismo.sp.gov.br/" target="_blank" rel="noopener">Turismo SP</a>
+  </div>
+</div>
         </div>
       </section>
 
