decimo commit - finalizado

--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
               <div class="card-body">
                 <h3>Vila do Doce</h3>
                 <p>
-                  Complexo gastronômico com doces, lanches e lojas de artesanato
+                   Uma vila tão doce quanto o nome! Complexo gastronômico com doces, lanches e lojas de artesanato
                   — ótimo para famílias.
                 </p>
             </article>
@@ -976,6 +976,78 @@
                 </p>
               </div>
             </article>
+            <article class="card pontos-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/parqueaquatico.jpg"
+                  alt="Rainbow Falls Parque Aquático"
+                  loading="lazy"
+                />
+                <figcaption>Parque aquático Rainbow Falls</figcaption>
+              </figure>
+              <div class="card-body">
+                <h3>Parque aquático Rainbow Fall</h3>
+                <p>
+                 Parque aquático com piscinas coloridas e toboáguas divertidos. 
+                 Ambiente familiar, ótimo para se refrescar e aproveitar um dia de lazer em meio à natureza de Ribeirão Pires.
+                </p>
+              </div>
+            </article>
+    
+               <article class="card pontos-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/castelo robson.jpg  "
+                  alt="Castelo Robson Miguel"
+                  loading="lazy"
+                />
+                <figcaption>Castelo Robson Miguel</figcaption>
+              </figure>
+              <div class="card-body">
+                <h3>Castelo Robson Miguel</h3>
+
+                Castelo temático em meio à natureza, com arquitetura singular e clima medieval. 
+                Ideal para fotos, eventos e passeios culturais em Ribeirão Pires.
+                </p>
+              </div>
+            </article>
+                     <article class="card pontos-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/PEROLA DA SERRA.jpg "
+                  alt="Castelo Robson Miguel"
+                  loading="lazy"
+                />
+                <figcaption>Parque Pérola da serra   </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Parque Pérola da serra </h3>
+                Parque urbano rodeado por muito verde, com lago, trilhas leves e espaços de lazer. 
+                Perfeito para caminhadas, piqueniques e momentos tranquilos no coração de Ribeirão Pires.
+                </p>
+              </div>
+            </article>
+
+              <article class="card pontos-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/museu.jpg"
+                  alt="Museu Histórico Municipal"
+                  loading="lazy"
+                />
+                <figcaption>Museu Histórico Municipal</figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Museu Histórico Municipal </h3>
+                Museu instalado em prédio histórico, com acervo que preserva a memória da cidade. 
+                Ótimo para conhecer fatos, objetos e histórias que marcaram Ribeirão Pires.
+                </p>
+              </div>
+            </article>
+                </p>
+              </div>
+            </article>
+
           </div>
           <div style="text-align: center; margin-top: 18px">
             <button
@@ -1019,6 +1091,7 @@
                 </p>
             </article>
 
+            
             <article class="card">
               <figure>
                 <img
@@ -1107,6 +1180,109 @@
                 </p>
               </div>
             </article>
+
+             <article class="card gastronomia-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/monte castelo.jpg "
+                  alt="Monte Castelo"
+                  loading="lazy"
+                />
+                <figcaption>Monte Castelo </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Monte Castelo </h3>
+                <p>
+                  Lanchonete com salgados e pizzas de extrema qualidade. <br />
+                </p>
+              </div>
+            </article>
+
+               <article class="card gastronomia-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/terumi.png"
+                  alt="Terumi Sushi"
+                  loading="lazy"
+                />
+                <figcaption>Terumi Sushi </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Terumi Sushi </h3>
+                <p>
+               Restaurante japônes com estética oriental, lugar agrádavel e perfeito para família e amigos.  <br />
+                </p>
+              </div>
+            </article>
+
+            <article class="card gastronomia-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/consulado da carne.webp"
+                  alt="Consulado da Carne"
+                  loading="lazy"
+                />
+                <figcaption>Consulado da Carne </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3>Consulado da Carne </h3>
+                <p>
+                Grande variedade de carne com ótima preparação, e muito shope e carnes. <br />
+                </p>
+              </div>
+            </article>
+
+              <article class="card gastronomia-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/italin.webp"
+                  alt=" Ital´in House"
+                  loading="lazy"
+                />
+                <figcaption> Ital´in House </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Ital´in House  </h3>
+                <p>
+                Casa com uma variedade estrondosa de massa italiana. <br />
+                </p>
+              </div>
+            </article>
+
+                  <article class="card gastronomia-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/bistro.webp"
+                  alt=" Cconfraria Bistro"
+                  loading="lazy"
+                />
+                <figcaption> Cconfraria Bistro </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Cconfraria Bistro </h3>
+                <p>
+                 Ótimos coquetéis, com sobremesas sensacionais, e com karaoke incluso além de tudo. <br />
+                </p>
+              </div>
+            </article>
+
+               <article class="card gastronomia-extra" style="display: none">
+              <figure>
+                <img
+                  src="./img/rittorno.webp "
+                  alt=" Rittorno Pizzaria "
+                  loading="lazy"
+                />
+                <figcaption> Rittorno Pizzaria  </figcaption>
+              </figure>
+              <div class="card-body">
+                <h3> Rittorno Pizzaria  </h3>
+                <p>
+                    Pizzas de qualidade que nunca decepcionam com seus sabores e recheios.       <br />
+                </p>
+              </div>
+            </article>
+
           </div>
           <div style="text-align: center; margin-top: 18px">
             <button
