--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
         justify-content: center;
       }
       .login-container {
-        background: #fff;
+        background: #cec7c7;
         border-radius: 16px;
         box-shadow: 0 8px 32px rgba(15, 23, 35, 0.08);
         padding: 32px 26px 28px 26px;
