--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
             <article class="card gastronomia-extra" style="display: none">
               <figure>
                 <img
-                  src="./img/consulado da carne.webp"
+                  src="./img/churrascaria.webp"
                   alt="Consulado da Carne"
                   loading="lazy"
                 />
@@ -1269,7 +1269,7 @@
                <article class="card gastronomia-extra" style="display: none">
               <figure>
                 <img
-                  src="./img/rittorno.webp "
+                  src="./img/pizzaria.jpg "
                   alt=" Rittorno Pizzaria "
                   loading="lazy"
                 />
