decimo commit --- finalizado

--- a/index.html
+++ b/index.html
@@ -1426,14 +1426,13 @@
     <footer>
       <div class="footer-inner">
         <div>
-          © <span id="ano"></span> Ribeirão Pires — Conteúdo reunido em uma
-          OnePage
+          © <span id="ano"></span> Ribeirão Pires 
         </div>
         <div class="footer-contacts">
           <a
             href="mailto:contato@seusite.exemplo"
             aria-label="E-mail de contato"
-            >contato@seusite.exemplo</a
+            >contato@techpires.com</a
           >
           <a href="https://www.facebook.com/" target="_blank" rel="noopener"
             >Facebook</a
